Switch to PostgreSQL, add homework results
