# service/api/api-handler.go
@@ -9,6 +9,10 @@ func (rt *_router) Handler() http.Handler {
 	// Register routes
 	rt.router.POST("/enroll/", rt.wrap(rt.enrollNewUser))
 
+	rt.router.GET("/results/", rt.wrap(rt.listResults))
+	rt.router.GET("/results/:studentid/git", rt.wrap(rt.getGitLog))
+	rt.router.GET("/results/:studentid/openapi", rt.wrap(rt.getOpenAPILog))
+
 	// Special routes
 	rt.router.GET("/liveness", rt.liveness)
 
